tests/neg/toplevel-package/moredefs_2.scala
package foo
def bar = 2  // error: bar is a package
